plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.1.0'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    testCompileOnly 'org.projectlombok:lombok:1.18.32'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.passay:passay:1.6.4'
    implementation 'com.aventrix.jnanoid:jnanoid:2.0.0'
    implementation 'org.bitbucket.b_c:jose4j:0.9.6'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.security:spring-security-crypto:6.2.3'
    implementation 'org.liquibase:liquibase-core:4.28.0'
    implementation 'org.springframework.boot:spring-boot-docker-compose:3.3.2'
}

test {
    useJUnitPlatform()
}

bootBuildImage {
    builder = "bellsoft/buildpacks.builder:musl"
}